@@ -1,9 +1,9 @@
 import Dependencies.*
+import BNFC.*
 
 val scala3Version       = "3.3.0"
 val scala2Version       = "2.13.10"
 lazy val commonSettings = Seq(
-  organization      := "io.rhonix",
   version           := "0.1.0-SNAPSHOT",
   scalafmtOnCompile := !sys.env.contains("CI"), // Format on compile, disable in CI environments
 
@@ -15,6 +15,8 @@ lazy val commonSettings = Seq(
   // to run such tests in IntelliJ this argument has to be added explicitly.
   javaOptions ++= Seq(
     "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.nio=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
   ),
   Test / fork               := true,
   Test / parallelExecution  := false,
@@ -35,16 +37,14 @@ lazy val settingsScala2 = commonSettings ++ Seq(
   Compile / compile / wartremoverErrors ++= WartsSettings.DEFAULTS_SCALA_2,
 )
 
-lazy val rhonix = (project in file("."))
+lazy val all = (project in file("."))
   .settings(commonSettings*)
-  .aggregate(sdk, weaver, dproc, db, node)
+  .aggregate(sdk, weaver, dproc, db, node, rholang, legacy, sim, diag, macros)
 
 lazy val sdk = (project in file("sdk"))
 //  .settings(settingsScala3*) // Not supported in IntelliJ Scala plugin
   .settings(settingsScala2*)
-  .settings(
-    libraryDependencies ++= common ++ dbLibs ++ tests,
-  )
+  .settings(libraryDependencies ++= common ++ dbLibs ++ tests)
 
 // Database interfaces implementation
 lazy val db = (project in file("db"))
@@ -68,14 +68,18 @@ lazy val dproc = (project in file("dproc"))
   .settings(
     libraryDependencies ++= common ++ tests,
   )
-  .dependsOn(sdk, weaver, execution)
+  .dependsOn(sdk, weaver, diag)
 
 // Node implementation
 lazy val node = (project in file("node"))
 //  .settings(settingsScala3*) // Not supported in IntelliJ Scala plugin
   .settings(settingsScala2*)
   .settings(
-    libraryDependencies ++= common ++ Seq(protobuf, grpc, grpcNetty) ++ tests,
+    libraryDependencies ++= common ++ Seq(
+      protobuf,
+      grpc,
+      grpcNetty,
+    ) ++ tests ++ log ++ http4s ++ endpoints4s ++ cryptoLibs :+ lmdbjava :+ enumeratum :+ pureConfig,
     resolvers ++=
       // for embedded InfluxDB
       Resolver.sonatypeOssRepos("releases") ++
@@ -91,24 +95,6 @@ lazy val diag = (project in file("diag"))
     libraryDependencies ++= common ++ tests ++ diagnostics,
     // for embedded InfluxDB
     resolvers ++= Resolver.sonatypeOssRepos("releases"),
-  )
-  .dependsOn(sdk % "compile->compile;test->test")
-
-// Execution
-lazy val execution = (project in file("execution"))
-  //  .settings(settingsScala3*) // Not supported in IntelliJ Scala plugin
-  .settings(settingsScala2*)
-  .settings(
-    libraryDependencies ++= common ++ tests ++ diagnostics,
-  )
-  .dependsOn(sdk % "compile->compile;test->test")
-
-// API implementations
-lazy val api = (project in file("api"))
-  //  .settings(settingsScala3*) // Not supported in IntelliJ Scala plugin
-  .settings(settingsScala2*)
-  .settings(
-    libraryDependencies ++= common ++ tests ++ diagnostics ++ http4s,
   )
   .dependsOn(sdk % "compile->compile;test->test")
 
@@ -128,12 +114,53 @@ lazy val sim = (project in file("sim"))
   .settings(
     libraryDependencies ++= common,
     version                          := "0.1.0-SNSHOT",
-    organization                     := "io.rhonix",
-    assembly / mainClass             := Some("sim.Sim"),
-    assembly / assemblyJarName       := "rhonix.sim.jar",
+    assembly / mainClass             := Some("sim.NetworkSim"),
+    assembly / assemblyJarName       := "sim.jar",
     assembly / assemblyMergeStrategy := {
+      case PathList("reference.conf")    => MergeStrategy.concat
       case PathList("META-INF", xs @ _*) => MergeStrategy.discard
       case x                             => MergeStrategy.first
     },
   )
-  .dependsOn(node, api, db)
+  .dependsOn(node, db, diag)
+
+// Rholang implementation
+lazy val rholang = (project in file("rholang"))
+  .settings(settingsScala2*)
+  .settings(bnfcSettings*)
+  .settings(libraryDependencies ++= common ++ tests :+ protobuf :+ bouncyProvCastle)
+  // TODO Matching the rholang object should be always exhaustive. Remove when done.
+  .settings(scalacOptions ++= Seq("-Xlint:-strict-unsealed-patmat", "-Xnon-strict-patmat-analysis"))
+  .dependsOn(sdk % "compile->compile;test->test")
+
+// Legacy implementation (rholang + rspace)
+lazy val legacy = (project in file("legacy"))
+  .settings(settingsScala2*)
+  .settings(
+    scalacOptions ~= { options =>
+      options.filterNot(Set("-Xfatal-warnings", "-Ywarn-unused:imports")) ++ Seq(
+        "-Xlint:-strict-unsealed-patmat",
+        "-Xnon-strict-patmat-analysis",
+        "-Wconf:cat=deprecation:ws",   // suppress deprecation warnings
+        "-Xlint:-missing-interpolator",// Disable false positive strings containing ${...}
+      )
+    },
+    Compile / compile / wartremoverErrors ~= {
+      _.filterNot(Seq(Wart.SeqApply, Wart.Throw, Wart.Var, Wart.SeqUpdated).contains)
+    },
+    libraryDependencies ++= common ++ tests ++ legacyLibs,
+    resolvers += ("jitpack" at "https://jitpack.io"),
+  )
+  .dependsOn(sdk, rholang, macros) // depends on new rholang implementation
+
+// Macro implementation should be compiled before macro application
+// https://stackoverflow.com/questions/75847326/macro-implementation-not-found-scala-2-13-3
+lazy val macros = (project in file("macros"))
+  .settings(settingsScala2*)
+  .settings(
+    libraryDependencies ++= common ++ legacyLibs,
+    resolvers ++=
+      // for kalium
+      Resolver.sonatypeOssRepos("releases") ++
+        Resolver.sonatypeOssRepos("snapshots") :+ ("jitpack" at "https://jitpack.io"),
+  )
